# llm-performance

./: CLAUDE.md  Cargo.toml  HARDWARE_CATEGORIES.md  INFERENCE_BENCHMARKING.md  MIGRATION_GUIDE.md  SETUP.md  TESTING_BENCHMARKS.md  check_generic_entries.sql  check_migration_status.sql  complete_partial_migration.sql  find_test_runs.sh  llama-bench.json  mmlu-pro-2.txt  report.txt  reset_migration.sql  run_migration.sh  test_api_categories.sh  test_benchmark_upload.sh  test_delete_api.sh  test_hardware_categories.sql  test_hardware_filter_locally.sh  uploader_examples.md  verify_model_variants.sql
backend/: .env  Cargo.toml  test-experiment.json
backend/.sqlx/: query-0298f2c7d213f51829016589278092fcfd0c785cc3b78635713096e9c7ad2563.json  query-0352ee9ea6844c8a6813f0ff6d9c99e31734ed85a46a3c37a15af2f40b4d1103.json  query-0648411f1f856ec9a255424aedd1c3531fc92d7782e9a6c579ae1c2d24f1a9a5.json  query-07f2c0a989920589cc0681819d7f3584c9d15ced63c5c16f452cd3c2d961702b.json  query-0a29712614d691b7cb997f69e374af874c0660f42b5df2a2f35bf5ac7c13aa95.json  query-0c8159253c08b62ac6a0c7dabc733c234e8c4604cab121581894fb0bc2a41d1e.json  query-0cc501989b85f09b33333ca7341f803d569fd7ef02faa905421f08fbd6c13664.json  query-0d10c0d6aaa9014b66dfb14e30da059b52cc828a6b95b6a11b72d3f9815feb74.json  query-135462c787c0a8f19a1af945f8a57ce8a1b5242849fab94f919d725abd4daf9d.json  query-1f26e2660818f363f9cf432701f6f5119bd6bea05691391b8def374e4f308e7e.json  query-2292ff09b5ded2f03dc1d0963ff368a853d94c94d0238511b333821ecbe1229a.json  query-2d923eb531d144f0b5ec7deec9e8d02d75dfbcedd9b72ae818f53a658ff46db4.json  query-302444c3295c3fc1c7e89cb06dae4ead86a030ec219295c07444d74d7a0b4fcf.json  query-376d7ebc8dd5afea4238f2f76229f780328d2d5573ca115b02b02f7550bdb9a7.json  query-396a9f8e1fa820d46aa60febc90abb96574ab4897b9b733e9daae72d426fc28e.json  query-44ca10aa9e5b8fd68deff852d92769539463dac4a37c61a9cc25c4140a8da207.json  query-4958849c79d7b456bb59185702c196f11f66ac0237aee741b5a5d03e4de9406a.json  query-4d19677ccafc478b735d5661366ca358d76d6f23a59ad3e4e60c699f6fce8260.json  query-50bdc329406acc4823cedea2ee254625f9e1d181ae70a76dd65bec41870a654d.json  (+41 more)
backend/scripts/: clear_all_data.sql
uploader/: Cargo.toml  INFERENCE_UPLOAD.md  README.md  example-benchmarks.json  example-custom-experiment.json  test-mmlu-upload.sh  upload-mmlu-pro-example.sh
(+105 files in other folders)
