[package]
name = "llm-benchmark-uploader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark-uploader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

llm-benchmark-types = { path = "../types" }